# ereader-sync

./: .coverage  .coveragerc  .gitignore  CLAUDE.md  INSTALL.md  PROGRESS_FORMAT.md  README.md  SCRAPER_SPEC.md  TROUBLESHOOTING.md  ereader-gui  ereader-tui  main.py  pyproject.toml  requirements.txt  test_requirements.txt
config/: application.config  secrets.config.template
tests/: __init__.py  test_common.py  test_config_reader.py  test_python.py  test_scrape_hcr.py  test_scrape_hn.py  test_upload_to_epaper.py  test_wifi_switch.sh  test_xtc_converter.py
